--- a/learning_log/learning_logs/templates/base.html
+++ b/learning_log/learning_logs/templates/base.html
@@ -1,4 +1,17 @@
-<h1>hello django</h1>
-
+<p>
+  <a href="{% url 'learning_logs:index' %}">learning_logs</a>
+  &emsp;
+  <a href="{% url 'learning_logs:topic_list' %}">Topics</a>
+  {% if user.is_authenticated %}.
+    &emsp;
+    Hello, {{ user.username }}
+    <a href="{% url 'users:logout' %}">logout</a>
+  {% else %}
+    &emsp;
+    <a href="{% url 'users:register' %}">register</a>
+    &emsp;
+    <a href="{% url 'users:login' %}">log in</a>
+  {% endif %}
+</p>
 {% block content %}
 {% endblock content %}
